plugins {
    id 'com.gtnewhorizons.gtnhconvention'
}

version = providers.gradleProperty('modVersion').get()
group = providers.gradleProperty('modGroup').get()

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

def productionDevMods = fileTree('devmods') { include '*.jar' }
def mcpDevMods = fileTree('devmods/deobf') { include '*.jar' }
def remappedDevModsDir = layout.buildDirectory.dir('devmods/remapped')

configurations.create('remappedDevMods') {
    canBeConsumed = false
    canBeResolved = true
    visible = false
}

dependencies {
    // RFG remaps ordinary production (SRG-named) mods into this MCP workspace.
    // Keep explicitly supplied development jars out of that transform.
    remappedDevMods(rfg.deobf(productionDevMods))
    devOnlyNonPublishable(fileTree(remappedDevModsDir) { include '*.jar' })
    devOnlyNonPublishable(mcpDevMods)
    devOnlyNonPublishable("com.github.GTNewHorizons:CodeChickenCore:1.4.16:dev")
    devOnlyNonPublishable("com.github.GTNewHorizons:NotEnoughItems:2.8.114-GTNH:dev")
}

tasks.register('prepareDevMods') {
    group = 'forgegradle'
    description = 'Resolves and remaps the external development mods used by runClient.'
    inputs.files(productionDevMods, mcpDevMods)
    outputs.dir(remappedDevModsDir)

    doLast {
        try {
            def destination = remappedDevModsDir.get().asFile
            delete(destination)
            copy {
                from(configurations.remappedDevMods)
                into(destination)
            }
        } catch (Exception failure) {
            def configuredNames = (productionDevMods.files + mcpDevMods.files)*.name.sort()
            def detail = configuredNames.empty ? 'the development-mod configuration' : configuredNames.join(', ')
            throw new GradleException(
                "Could not prepare development mod(s): ${detail}. " +
                    'Production jars belong in devmods; MCP development jars belong in devmods/deobf.',
                failure)
        }
    }
}

configurations.devOnlyNonPublishable {
    exclude group: 'codechicken', module: 'CodeChickenCore'
    exclude group: 'codechicken', module: 'NotEnoughItems'
}

def prepareDevModsTask = tasks.named('prepareDevMods')

def requestedDevUsername = providers.gradleProperty('devUsername').orNull
def requestedDevUuid = providers.gradleProperty('devUuid').orNull

if (requestedDevUsername != null && !(requestedDevUsername ==~ /[A-Za-z0-9_]{1,16}/))
    throw new GradleException('devUsername must contain 1-16 letters, digits, or underscores.')
if (requestedDevUuid != null) {
    if (!(requestedDevUuid ==~ /(?i)[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}/))
        throw new GradleException('devUuid must be a standard UUID, for example 12345678-1234-1234-1234-123456789abc.')
    java.util.UUID.fromString(requestedDevUuid)
}

// Generate this once per Gradle invocation. RFG finalizes the run properties before execution,
// so the identity must be wired during configuration rather than changed in a task action.
def runClientUuid = requestedDevUuid ?: java.util.UUID.randomUUID().toString()

tasks.named('compileJava') {
    dependsOn(prepareDevModsTask)
}

tasks.named('runClient') {
    dependsOn(prepareDevModsTask)

    // With no override, leave the username under GTNH/RFG control. A blank
    // developmentEnvironmentUserName produces its normal Developer<number> name.
    if (requestedDevUsername != null)
        username.set(requestedDevUsername)
    userUUID.set(runClientUuid)

    doFirst {
        logger.lifecycle("Development player: ${username.get()} (${userUUID.get()})")
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.named('processResources') {
    inputs.property 'version', project.version
    inputs.property 'mcversion', providers.gradleProperty('minecraftVersion')
    filesMatching('mcmod.info') {
        expand(version: project.version, mcversion: providers.gradleProperty('minecraftVersion').get())
    }
}

def earthCleanInput = providers.gradleProperty('earthCleanMap').orElse('').map { it.trim() }
def earthPopulatedInput = providers.gradleProperty('earthPopulatedMap').orElse('').map { it.trim() }
def earthGenerated = layout.buildDirectory.dir('generated/earthmaps')

tasks.register('validateEarthMapInputs') {
    group = 'earth maps'
    description = 'Validates that both real .xfmap inputs are present and internally valid.'
    doLast {
        [[earthCleanInput.get(), 'xf-earth-16k-clean'], [earthPopulatedInput.get(), 'xf-earth-16k-populated']].each { spec ->
            if (!spec[0]) throw new GradleException("Missing -Pearth${spec[1].contains('clean') ? 'Clean' : 'Populated'}Map=<path>")
            File archive = file(spec[0])
            if (!archive.isFile()) throw new GradleException("Earth map does not exist: ${archive}")
            def zip = new java.util.zip.ZipFile(archive)
            try {
                def entry = zip.getEntry('earth-map-pack.json')
                if (entry == null) throw new GradleException("${archive.name} has no earth-map-pack.json")
                def manifest = new groovy.json.JsonSlurper().parse(zip.getInputStream(entry))
                if (manifest.formatVersion != 1 || manifest.minecraftVersion != '1.7.10' || manifest.id != spec[1])
                    throw new GradleException("${archive.name} manifest must identify ${spec[1]} format 1 for Minecraft 1.7.10")
                ['xenoearth-profile.json', 'template-level.dat'].each { if (zip.getEntry(it) == null) throw new GradleException("${archive.name} is missing ${it}") }
            } finally { zip.close() }
        }
    }
}

tasks.register('generateBundledEarthMapIndex') {
    dependsOn 'validateEarthMapInputs'
    outputs.file(earthGenerated.map { it.file('builtin-earthmaps.json') })
    doLast {
        File dir = earthGenerated.get().asFile; dir.mkdirs()
        def digest = { File f -> java.security.MessageDigest.getInstance('SHA-256').digest(f.bytes).encodeHex().toString() }
        def packs = [[earthCleanInput.get(), 'xf-earth-16k-clean', 'earth-16k-clean.xfmap', 0], [earthPopulatedInput.get(), 'xf-earth-16k-populated', 'earth-16k-populated.xfmap', 1]].collect { x ->
            File f=file(x[0]); [id:x[1], resourcePath:"assets/hfr/earthmaps/bundled/${x[2]}", archiveSize:f.length(), archiveSha256:digest(f), displayOrder:x[3]]
        }
        new File(dir, 'builtin-earthmaps.json').text = groovy.json.JsonOutput.prettyPrint(groovy.json.JsonOutput.toJson([formatVersion:1,packs:packs])) + '\n'
    }
}

tasks.register('jarWithEarthMaps', Jar) {
    group = 'earth maps'; description = 'Builds the release JAR containing both supplied, validated Earth map archives.'
    dependsOn tasks.named('jar'), tasks.named('generateBundledEarthMapIndex')
    archiveClassifier.set('with-earthmaps')
    from(zipTree(tasks.named('jar').get().archiveFile))
    from(earthCleanInput) { into 'assets/hfr/earthmaps/bundled'; rename { 'earth-16k-clean.xfmap' } }
    from(earthPopulatedInput) { into 'assets/hfr/earthmaps/bundled'; rename { 'earth-16k-populated.xfmap' } }
    from(earthGenerated) { into 'assets/hfr/earthmaps/bundled' }
}

if (providers.gradleProperty('includeBundledEarthMaps').orElse('false').get().toBoolean()) {
    tasks.named('processResources') {
        dependsOn 'generateBundledEarthMapIndex'
        from(earthCleanInput) { into 'assets/hfr/earthmaps/bundled'; rename { 'earth-16k-clean.xfmap' } }
        from(earthPopulatedInput) { into 'assets/hfr/earthmaps/bundled'; rename { 'earth-16k-populated.xfmap' } }
        from(earthGenerated) { into 'assets/hfr/earthmaps/bundled' }
    }
}
